--- a/GameSource/GameSource/Name.csproj
+++ b/GameSource/GameSource/Name.csproj
@@ -100,7 +100,7 @@
     <Content Include="Data\TextFile1.txt" />
     <Content Include="Engine\Graphics\TextFile1.txt" />
     <Content Include="Data\Graphics\TextFile1.txt" />
-    <Content Include="Views\TextFile1.txt" />
+    <Content Include="Engine\Views\TextFile1.txt" />
     <Content Include="Shared\TextFile1.txt" />
     <Content Include="Data\Sounds\TextFile1.txt" />
   </ItemGroup>
