Modified enemy and added some interfaces.

--- a/GameSource/GameSource/Name.csproj
+++ b/GameSource/GameSource/Name.csproj
@@ -48,26 +48,30 @@
     <Compile Include="Engine\MultiPlayer.cs" />
     <Compile Include="Engine\Game.cs" />
     <Compile Include="Engine\Scripts\Characters\Shared\BaseStats.cs" />
+    <Compile Include="Engine\Scripts\Characters\Shared\Coordinate.cs" />
     <Compile Include="Engine\Scripts\Characters\Shared\Element.cs" />
+    <Compile Include="Engine\Scripts\Characters\Shared\INpcEnemy.cs" />
     <Compile Include="Engine\Scripts\Characters\Shared\IMovable.cs" />
-    <Compile Include="Engine\Scripts\Characters\Enemy\Alien.cs" />
-    <Compile Include="Engine\Scripts\Characters\Enemy\Boss.cs" />
-    <Compile Include="Engine\Scripts\Characters\Enemy\Ninja.cs" />
+    <Compile Include="Engine\Scripts\Characters\NonPlayer\Alien.cs" />
+    <Compile Include="Engine\Scripts\Characters\NonPlayer\Boss.cs" />
+    <Compile Include="Engine\Scripts\Characters\NonPlayer\Ninja.cs" />
     <Compile Include="Engine\Scripts\Characters\Items\Item.cs" />
     <Compile Include="Engine\Scripts\Characters\Items\OneHanded.cs" />
     <Compile Include="Engine\Scripts\Characters\Items\Potion.cs" />
     <Compile Include="Engine\Scripts\Characters\Items\PotionHealth.cs" />
     <Compile Include="Engine\Scripts\Characters\Player\Ivan.cs" />
     <Compile Include="Engine\Scripts\Characters\Quests\Quest.cs" />
+    <Compile Include="Engine\Scripts\Characters\Shared\INpcQuest.cs" />
+    <Compile Include="Engine\Scripts\Characters\Shared\INpcVendor.cs" />
     <Compile Include="Engine\SinglePlayer.cs" />
     <Compile Include="System\ExceptionSample.cs" />
     <Compile Include="System\LoggerEngine.cs" />
     <Compile Include="Engine\Sound\SoundEngine.cs" />
     <Compile Include="Engine\Scripts\Environment\Room.cs" />
     <Compile Include="Name.cs" />
-    <Compile Include="Engine\Scripts\Characters\Enemy\Enemy.cs" />
-    <Compile Include="Engine\Scripts\Characters\Enemy\Humanoid.cs" />
-    <Compile Include="Engine\Scripts\Characters\Enemy\Animal.cs" />
+    <Compile Include="Engine\Scripts\Characters\NonPlayer\Enemy.cs" />
+    <Compile Include="Engine\Scripts\Characters\NonPlayer\Humanoid.cs" />
+    <Compile Include="Engine\Scripts\Characters\NonPlayer\Animal.cs" />
     <Compile Include="Engine\Scripts\Characters\Player\Hero.cs" />
     <Compile Include="Engine\Scripts\Characters\Shared\Skill.cs" />
     <Compile Include="Engine\Scripts\Characters\Player\Gosho.cs" />
