--- a/GameSource/Wolf/WolfDemo.csproj
+++ b/GameSource/Wolf/WolfDemo.csproj
@@ -90,6 +90,9 @@
   <ItemGroup>
     <None Include="Resources\Tile16x16Black.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Level0.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
