--- a/GameSource/WolfGameLoop/WolfGameLoop.csproj
+++ b/GameSource/WolfGameLoop/WolfGameLoop.csproj
@@ -44,12 +44,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Game.Common\Collisions.cs" />
     <Compile Include="Game.Common\FastLoop.cs" />
     <Compile Include="Game.Common\GameForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Game.Common\GameTime.cs" />
     <Compile Include="Game.Common\Level.cs" />
+    <Compile Include="Game.Common\Player.cs" />
     <Compile Include="WinForm\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
