renamed project to Wolfenstein

--- a/GameSource/Wolfenstein/Wolfenstein.csproj
+++ b/GameSource/Wolfenstein/Wolfenstein.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{750B81F3-BD20-4BD6-8B54-E743A9C09889}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GameLoop</RootNamespace>
+    <RootNamespace>Game</RootNamespace>
     <AssemblyName>WolfDemo2</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -58,7 +58,7 @@
     <Compile Include="WinForm\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="WinForm\Program.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Game.Common\GameForm.resx">
       <DependentUpon>GameForm.cs</DependentUpon>
