Modified characters to nazis

--- a/GameSource/RPGGame/RPG.csproj
+++ b/GameSource/RPGGame/RPG.csproj
@@ -51,18 +51,23 @@
     <Compile Include="Engine\Scripts\Characters\Items\OneHanded.cs" />
     <Compile Include="Engine\Scripts\Characters\Items\Potion.cs" />
     <Compile Include="Engine\Scripts\Characters\Items\PotionHealth.cs" />
-    <Compile Include="Engine\Scripts\Characters\NonPlayable\Alien.cs" />
+    <Compile Include="Engine\Scripts\Characters\NonPlayable\AnimalDog.cs" />
+    <Compile Include="Engine\Scripts\Characters\NonPlayable\GuardDog.cs" />
+    <Compile Include="Engine\Scripts\Characters\NonPlayable\NaziOfficer.cs" />
+    <Compile Include="Engine\Scripts\Characters\NonPlayable\SS.cs" />
     <Compile Include="Engine\Scripts\Characters\NonPlayable\Animal.cs" />
-    <Compile Include="Engine\Scripts\Characters\NonPlayable\Boss.cs" />
+    <Compile Include="Engine\Scripts\Characters\NonPlayable\SSBoss.cs" />
     <Compile Include="Engine\Scripts\Characters\NonPlayable\Enemy.cs" />
-    <Compile Include="Engine\Scripts\Characters\NonPlayable\Humanoid.cs" />
-    <Compile Include="Engine\Scripts\Characters\NonPlayable\Ninja.cs" />
+    <Compile Include="Engine\Scripts\Characters\NonPlayable\Nazi.cs" />
+    <Compile Include="Engine\Scripts\Characters\NonPlayable\NaziSoldier.cs" />
+    <Compile Include="Engine\Scripts\Characters\NonPlayable\SSOfficer.cs" />
     <Compile Include="Engine\Scripts\Characters\Playable\Gosho.cs" />
     <Compile Include="Engine\Scripts\Characters\Playable\Hero.cs" />
     <Compile Include="Engine\Scripts\Characters\Playable\Ivan.cs" />
     <Compile Include="Engine\Scripts\Characters\Quests\Quest.cs" />
     <Compile Include="Engine\Scripts\Characters\Shared\Character.cs" />
     <Compile Include="Engine\Scripts\Characters\Shared\Coordinate.cs" />
+    <Compile Include="Engine\Scripts\Characters\Shared\Enums.cs" />
     <Compile Include="Engine\Scripts\Characters\Shared\IHero.cs" />
     <Compile Include="Engine\Scripts\Characters\Shared\IMovable.cs" />
     <Compile Include="Engine\Scripts\Characters\Shared\INpcEnemy.cs" />
