--- a/GameSource/RPGGame/RPG.csproj
+++ b/GameSource/RPGGame/RPG.csproj
@@ -100,10 +100,10 @@
       <DependentUpon>SelectHero.cs</DependentUpon>
     </Compile>
     <Compile Include="Entry.cs" />
-    <Compile Include="GameSystem\Input.cs" />
+    <Compile Include="GameSystem\Controls\Input.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="GameSystem\InvalidNumberOfPlayers.cs" />
-    <Compile Include="GameSystem\LoggerEngine.cs" />
+    <Compile Include="GameSystem\CustomExceptions\InvalidNumberOfPlayers.cs" />
+    <Compile Include="GameSystem\ExceptionLogging\LoggerEngine.cs" />
     <EmbeddedResource Include="Engine\Views\GameWindow.resx">
       <DependentUpon>GameWindow.cs</DependentUpon>
     </EmbeddedResource>
@@ -147,6 +147,7 @@
     <Content Include="Engine\Views\TextFile1.txt" />
     <Content Include="Shared\TextFile1.txt" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
