--- a/GameSource/RPGGame/RPG.csproj
+++ b/GameSource/RPGGame/RPG.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Engine\Scripts\Characters\Items\Gun.cs" />
     <Compile Include="Engine\Scripts\Characters\Items\Potion.cs" />
     <Compile Include="Engine\Scripts\Characters\NonPlayable\AnimalDog.cs" />
+    <Compile Include="Engine\Scripts\Characters\NonPlayable\EnemyFactory.cs" />
     <Compile Include="Engine\Scripts\Characters\NonPlayable\NaziOfficer.cs" />
     <Compile Include="Engine\Scripts\Characters\NonPlayable\SS.cs" />
     <Compile Include="Engine\Scripts\Characters\NonPlayable\Animal.cs" />
@@ -72,10 +73,10 @@
     <Compile Include="Engine\Scripts\Characters\Shared\Character.cs" />
     <Compile Include="Engine\Scripts\Characters\Shared\Coordinate.cs" />
     <Compile Include="Engine\Scripts\Characters\Shared\Enums.cs" />
-    <Compile Include="Engine\Scripts\Characters\Shared\IHero.cs" />
-    <Compile Include="Engine\Scripts\Characters\Shared\IMovable.cs" />
-    <Compile Include="Engine\Scripts\Characters\Shared\INpcEnemy.cs" />
-    <Compile Include="Engine\Scripts\Characters\Shared\IPlayable.cs" />
+    <Compile Include="Engine\Scripts\Interfaces\IHero.cs" />
+    <Compile Include="Engine\Scripts\Interfaces\IMovable.cs" />
+    <Compile Include="Engine\Scripts\Interfaces\INpcEnemy.cs" />
+    <Compile Include="Engine\Scripts\Interfaces\IPlayable.cs" />
     <Compile Include="Engine\Scripts\Characters\Shared\RandomGenerator.cs" />
     <Compile Include="Engine\Scripts\Characters\Shared\Skill.cs" />
     <Compile Include="Engine\Scripts\Environment\Room.cs" />
@@ -101,6 +102,7 @@
     </Compile>
     <Compile Include="Entry.cs" />
     <Compile Include="GameSystem\Controls\Input.cs" />
+    <Compile Include="GameSystem\ExceptionLogging\Messages.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GameSystem\CustomExceptions\InvalidNumberOfPlayers.cs" />
     <Compile Include="GameSystem\ExceptionLogging\LoggerEngine.cs" />
