--- a/GameSource/RPGGame/RPG.csproj
+++ b/GameSource/RPGGame/RPG.csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>RPG.Program</StartupObject>
+    <StartupObject>RPG.Tests.TestPathFinding</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
